--- a/ProjectISA_StudyServer/ProjectISA_StudyServer/db.settings
+++ b/ProjectISA_StudyServer/ProjectISA_StudyServer/db.settings
@@ -15,7 +15,7 @@
       <Value Profile="(Default)" />
     </Setting>
     <Setting Name="DbPort" Type="System.String" Scope="User">
-      <Value Profile="(Default)" />
+      <Value Profile="(Default)">3360</Value>
     </Setting>
   </Settings>
 </SettingsFile>
