--- a/ProjectISA_StudyServer/Study_LIB/Study_LIB.csproj
+++ b/ProjectISA_StudyServer/Study_LIB/Study_LIB.csproj
@@ -47,7 +47,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Koneksi.cs" />
-    <Compile Include="Order.cs" />
+    <Compile Include="Keranjang.cs" />
     <Compile Include="Pembeli.cs" />
     <Compile Include="Penjual.cs" />
     <Compile Include="Produks.cs" />
