--- a/ProjectISA_StudyServer/ProjectISA_StudyServer/App.config
+++ b/ProjectISA_StudyServer/ProjectISA_StudyServer/App.config
@@ -23,7 +23,7 @@
                 <value />
             </setting>
             <setting name="DbPort" serializeAs="String">
-                <value>3360</value>
+                <value />
             </setting>
         </ProjectISA_StudyServer.db>
     </userSettings>
