--- a/ProjectISA_StudyServer/Study_LIB/Study_LIB.csproj
+++ b/ProjectISA_StudyServer/Study_LIB/Study_LIB.csproj
@@ -33,7 +33,7 @@
   <ItemGroup>
     <Reference Include="MySql.Data, Version=8.0.31.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\..\..\..\Semester 3\Database\materi\MySql.Data.dll</HintPath>
+      <HintPath>..\..\..\..\..\Downloads\MySql.Data.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Configuration" />
